[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui/championship/dashboard/final-stage/FinalStage.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/airbroomball_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/teams/national-teams/italy.png" type="Texture" id=3]

[node name="FinalStage" type="Control"]
anchor_left = 0.5
anchor_top = 0.538
anchor_right = 0.5
anchor_bottom = 0.538
margin_left = -350.0
margin_top = -300.14
margin_right = 350.0
margin_bottom = 202.86
rect_min_size = Vector2( 700, 600 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -304.0
margin_top = -248.5
margin_right = 304.0
margin_bottom = 248.5

[node name="StageName" type="Label" parent="VBoxContainer"]
margin_right = 608.0
margin_bottom = 64.0
text = "QUARTER FINALS"
align = 1

[node name="Winner" type="Label" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 608.0
margin_bottom = 138.0
align = 1

[node name="WinnerIcon" type="TextureRect" parent="VBoxContainer"]
margin_top = 148.0
margin_right = 608.0
margin_bottom = 148.0
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 158.0
margin_right = 608.0
margin_bottom = 444.0
alignment = 1

[node name="Match1" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_right = 608.0
margin_bottom = 64.0

[node name="Home" type="Label" parent="VBoxContainer/VBoxContainer/Match1"]
margin_right = 157.0
margin_bottom = 64.0
size_flags_horizontal = 3
text = "USA"

[node name="HomeIcon" type="TextureRect" parent="VBoxContainer/VBoxContainer/Match1"]
margin_left = 161.0
margin_right = 221.0
margin_bottom = 64.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 3 )
expand = true

[node name="Versus" type="Label" parent="VBoxContainer/VBoxContainer/Match1"]
margin_left = 225.0
margin_right = 382.0
margin_bottom = 64.0
size_flags_horizontal = 3
text = "vs"
align = 1

[node name="AwayIcon" type="TextureRect" parent="VBoxContainer/VBoxContainer/Match1"]
margin_left = 386.0
margin_right = 446.0
margin_bottom = 64.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 3 )
expand = true

[node name="Away" type="Label" parent="VBoxContainer/VBoxContainer/Match1"]
margin_left = 450.0
margin_right = 608.0
margin_bottom = 64.0
size_flags_horizontal = 3
text = "ITA"
align = 2

[node name="Match2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 608.0
margin_bottom = 138.0

[node name="Home" type="Label" parent="VBoxContainer/VBoxContainer/Match2"]
margin_right = 157.0
margin_bottom = 64.0
size_flags_horizontal = 3
text = "USA"

[node name="HomeIcon" type="TextureRect" parent="VBoxContainer/VBoxContainer/Match2"]
margin_left = 161.0
margin_right = 221.0
margin_bottom = 64.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 3 )
expand = true

[node name="Versus" type="Label" parent="VBoxContainer/VBoxContainer/Match2"]
margin_left = 225.0
margin_right = 382.0
margin_bottom = 64.0
size_flags_horizontal = 3
text = "vs"
align = 1

[node name="AwayIcon" type="TextureRect" parent="VBoxContainer/VBoxContainer/Match2"]
margin_left = 386.0
margin_right = 446.0
margin_bottom = 64.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 3 )
expand = true

[node name="Away" type="Label" parent="VBoxContainer/VBoxContainer/Match2"]
margin_left = 450.0
margin_right = 608.0
margin_bottom = 64.0
size_flags_horizontal = 3
text = "ITA"
align = 2

[node name="Match3" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 608.0
margin_bottom = 212.0

[node name="Home" type="Label" parent="VBoxContainer/VBoxContainer/Match3"]
margin_right = 157.0
margin_bottom = 64.0
size_flags_horizontal = 3
text = "IND"

[node name="HomeIcon" type="TextureRect" parent="VBoxContainer/VBoxContainer/Match3"]
margin_left = 161.0
margin_right = 221.0
margin_bottom = 64.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 3 )
expand = true

[node name="Versus" type="Label" parent="VBoxContainer/VBoxContainer/Match3"]
margin_left = 225.0
margin_right = 382.0
margin_bottom = 64.0
size_flags_horizontal = 3
text = "vs"
align = 1

[node name="AwayIcon" type="TextureRect" parent="VBoxContainer/VBoxContainer/Match3"]
margin_left = 386.0
margin_right = 446.0
margin_bottom = 64.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 3 )
expand = true

[node name="Away" type="Label" parent="VBoxContainer/VBoxContainer/Match3"]
margin_left = 450.0
margin_right = 608.0
margin_bottom = 64.0
size_flags_horizontal = 3
text = "ITA"
align = 2

[node name="Match4" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 222.0
margin_right = 608.0
margin_bottom = 286.0

[node name="Home" type="Label" parent="VBoxContainer/VBoxContainer/Match4"]
margin_right = 157.0
margin_bottom = 64.0
size_flags_horizontal = 3
text = "USA"

[node name="HomeIcon" type="TextureRect" parent="VBoxContainer/VBoxContainer/Match4"]
margin_left = 161.0
margin_right = 221.0
margin_bottom = 64.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 3 )
expand = true

[node name="Versus" type="Label" parent="VBoxContainer/VBoxContainer/Match4"]
margin_left = 225.0
margin_right = 382.0
margin_bottom = 64.0
size_flags_horizontal = 3
text = "vs"
align = 1

[node name="AwayIcon" type="TextureRect" parent="VBoxContainer/VBoxContainer/Match4"]
margin_left = 386.0
margin_right = 446.0
margin_bottom = 64.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 3 )
expand = true

[node name="Away" type="Label" parent="VBoxContainer/VBoxContainer/Match4"]
margin_left = 450.0
margin_right = 608.0
margin_bottom = 64.0
size_flags_horizontal = 3
text = "ITA"
align = 2
